# geo-spark

./: .gitignore  LICENSE  README.md  components.d.ts  index.html  package.json  tsconfig.app.json  tsconfig.json  vite.config.ts
.codewhale/: instructions.md
public/: splashscreen.html  test.html
src/: App.vue  main.ts  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/geo_spark/: mod.rs  shape_to_geojson.rs  shapefile_to_geojson.rs  states.rs  stream_file.rs  tle_czml.rs
src/assets/: default.json
src/components/cesium/: CesiumProvider.ts  CesiumViewer.vue  index.ts
src/components/cesium/imagery/: Imagery.vue  OSM.vue  Terrian.vue  index.ts
src/components/cesium/toolbar/: BaseLayerSwitch.vue  Clock.vue  Export.vue  FileLoader.vue  GeoCoder.vue  Light.vue  Location.vue  Measure.vue  Popup.vue  RoutePlan.vue  SunClock.vue  TerrainToggle.vue  Viewshed3D.vue  Zoom.vue  index.ts
src/components/data/: DataTable.vue  FloatingButton.vue  index.ts
src/components/forms/: LoginFieldSet.vue  RegisterFieldSet.vue  index.ts  loginData.ts
src/components/main/: AppSideBar.vue  MobileDock.vue  NavMain.vue  NavUser.vue  account.ts  index.ts
src/components/maplibre/: MapView.vue  MaplibreProvider.ts  index.ts
src/components/maplibre/layers/: DeckLayer.vue  Imagery.vue  OSMLayer.vue  index.ts
src/lib/: LoadGeoSpatialFile.ts  http.ts  index.ts  notification.ts  router.ts  tray.ts  utils.ts
src/lib/CesiumUtils/: Viewshed3D.d.ts  Viewshed3D.js  glsl.js  index.ts  utils.ts
src/lib/state/: index.ts  isMeasuring.ts  store.ts  temp.ts  useCapture.ts  useClock.ts  useFullScreen.ts  useGeoSpatitalFile.ts  useSettings.ts  useSources.ts
src/mainViews/: CesiumShow.vue  DataManager.vue
src/pages/: Login.vue  Main.vue
