[package]
name = "geo-spark"
version = "0.1.0"
description = "Geo-Spark,Application for Management of GeoServer"
authors = ["MarkusPersad<msp060308@gmail.com>"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "geo_spark_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-http = "2"
tauri-plugin-store = "2"
detect-desktop-environment = "1.2.0"
tauri-plugin-notification = "2"
tauri-plugin-shell = "2"
tauri-plugin-process = "2"
anyhow = "1.0.101"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
shapefile = "0.7.0"
dbase = "0.6.1"
geojson = "0.24.2"
regex = "1.12.3"
tokio = { version = "1.49.0", features = ["full"] }
futures = "0.3.32"
num_cpus = "1.17.0"
