[package]
name = "geo-spark"
version = "0.1.0"
description = "Geo-Spark,Application for Management of GeoServer"
authors = ["MarkusPersad<msp060308@gmail.com>"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "geo_spark_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "tray-icon", "default"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-http = "2"
tauri-plugin-store = "2"
detect-desktop-environment = "1.2.0"
tauri-plugin-notification = "2"
tauri-plugin-shell = "2"
tauri-plugin-process = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
mime = "0.3.17"
tokio = { version = "1.52.1", features = ["full"] }
percent-encoding = "2.3.2"
http-range = "0.1.5"
tauri-plugin-os = "2"
shp2geojson-cesium = { version = "0.1.4" }
anyhow = "1.0.102"
czml = "4.1.0"
satkit = { version = "0.16.2", features = ["chrono"] }
chrono = "0.4.44"
numeris = "0.5.8"
struson = { version = "0.7.2", features = ["serde"] }
public-ip-address = "0.4.0"
crabcamera = { version = "0.8.3",features = ["recording", "audio"] }
tauri-plugin-upload = "2"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2"
